Fixed weird word wrapping.

--- a/source/_assets/stylesheets/partials/_section.scss
+++ b/source/_assets/stylesheets/partials/_section.scss
@@ -1,9 +1,6 @@
 section {
 
   h1, h2, h3 {
-     -ms-word-break: break-all;
-         word-break: break-all;
-
          // Non standard for webkit
          word-break: break-word;
 
